<resources>
    <string name="app_name">Matrixx Vpn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="you_have_account">You have account?</string>
    <string name="log_in">Log in</string>
    <string name="e_mail">E-mail</string>
    <string name="your_password">Your password</string>
    <string name="replace_password">Replace password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="fish_text">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit,\nsed do eiusmod tempor incididunt ut\nlabore et dolore magna aliqua.</string>
    <string name="fish_text_no_skip">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
     <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="go_start">Go Start</string>
    <string name="contact_support">Contact support</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email_address_and_receive_a_verification_link_to_reset_your_password">Enter your email address and receive a\nverification link to reset your password</string>

    <string name="dialogResetTitle">Complete!</string>
    <string name="dialogResetMessage">Your password has been successfully changed!</string>
    <string name="dialogResetPositiveBtnText">Back to the Log In</string>
    <string name="on_boarding_passed">OnBoardingPassed</string>
    <string name="login_passed">LoginPassed</string>
    <string name="main">Main</string>
    <string name="notifications">Notifcations</string>
    <string name="partner_program">Partner program</string>
    <string name="support">Support</string>
    <string name="matrixx_vpn">MATRIXX.VPN</string>
    <string name="your_location">Your location</string>
    <string name="location">Germany, berlin</string>
    <string name="ip_address">11.240.222.128</string>
    <string name="no_connected">No connected</string>
    <string name="connected">Connected</string>
    <string name="time_sample">56:24:15</string>

    <string name="payment_is_made">Payment is made..</string>
    <string name="buy">Buy</string>
    <string name="my_account">My account</string>
    <string name="test_email_string">andrey123@gmail.com</string>
    <string name="device">Device</string>
    <string name="status">Status</string>
    <string name="activated">Activated</string>
    <string name="no_active">No active</string>
    <string name="pricing">Pricing</string>
    <string name="restore_password">Restore password</string>
    <string name="payments">Payments</string>
    <string name="receive_notifications_when_order_status_changes">Receive notifications when order status changes</string>
    <string name="receive_matrixx_news_alerts">Receive Matrixx news alerts</string>
    <string name="receive_system_notifications">Receive system notifications</string>
    <string name="go_premium">Go Premium</string>
    <string name="fast_stable_reliable">Fast, stable, reliable</string>
    <string name="premium_activation">Premium activation</string>
    <string name="please_enter_the_key_you_have_received_after_payment">Please enter the key you have received after payment</string>
    <string name="label">Label</string>
    <string name="continue_string">Continue</string>
    <string name="close">Close</string>

    <string name="activation_failed">Activation failed</string>
    <string name="free">Free</string>
    <string name="access_for_n_days">Access for N days</string>
    <string name="no_traffic_restriction">No traffic restriction</string>
    <string name="_1_connect">1 Connect</string>
    <string name="base">Base</string>
    <string name="without_selecting_a_location_server">Without selecting a location (server)</string>
    <string name="base_price">10,50$</string>
    <string name="premium">Premium</string>
    <string name="premium_price">20,50$</string>
    <string name="choosing_a_location">Choosing a location (server)</string>
    <string name="_10_connects">10 Connects</string>
    <string name="individual">Individual</string>
    <string name="bring_a_friend_and_get_10_days_free_use">Bring a friend\nand get 10 days\nfree use</string>
    <string name="share_link">Share link</string>
    <string name="participate">Participate</string>
    <string name="lvl">Lvl</string>
    <string name="reward">Reward</string>
    <string name="_1">1</string>
    <string name="_10">10%</string>
    <string name="_2">2</string>
    <string name="_20">20%</string>
    <string name="_3">3</string>
    <string name="_30">30%</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="send_question">Send question</string>
    <string name="telegram">Telegram</string>
    <string name="contact_us">Contact us</string>
    <string name="email">Email</string>
    <string name="faq">FAQ</string>
    <string name="your_question">Your question</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="renew_your_subscription">Renew your subscription</string>
  <string name="notifications_big">NOTIFICATIONS</string>
    <string name="previewed">Previewed</string>
    <string name="unreviewed">Unreviewed</string>
    <string name="by_date">By date</string>
    <string name="news">News</string>
    <string name="system">System</string>
    <string name="smth_wrong">Что-то пошло не так</string>
    <string name="matrixx_token">matrixx_token</string>
</resources>