<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_back_drawable">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/premium_activation"
        android:textColor="@color/dialogTitleColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/please_enter_the_key_you_have_received_after_payment"
        android:textColor="@color/dialogMessageColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PremiumTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/purple"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activationEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/continue_string"
        android:textColor="@color/dialogBtnColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/negativeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="36dp"
        android:text="@string/close"
        android:textColor="@color/dialogBtnColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positiveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>