<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.LoginFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/furore_font"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tactic_round_bold"
        android:layout_marginStart="4dp"
        android:text="@string/register"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/greyTransparent"
        android:fontFamily="@font/tactic_round"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingBottom="28dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/greyTransparent"
            android:fontFamily="@font/tactic_round"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:paddingBottom="28dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/showHideBtnPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:src="@drawable/password_eye"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/forgotPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green_back"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

</androidx.constraintlayout.widget.ConstraintLayout>