<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ResetPasswordFragment"
    android:padding="16dp">
    <FrameLayout
        android:id="@+id/backFrameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back" />
    </FrameLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/furore_font"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/enter_your_email_address_and_receive_a_verification_link_to_reset_your_password"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/greyTransparent"
        android:fontFamily="@font/tactic_round"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingBottom="28dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/greyTransparent"
            android:fontFamily="@font/tactic_round"
            android:hint="@string/your_password"
            android:visibility="gone"
            android:inputType="textPassword"
            android:paddingBottom="28dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/showHideBtnPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:src="@drawable/password_eye"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repeatPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/greyTransparent"
            android:fontFamily="@font/tactic_round"
            android:hint="@string/replace_password"
            android:inputType="textPassword"
            android:visibility="gone"
            android:paddingBottom="28dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/showHideBtnRepeat"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:src="@drawable/password_eye"
            app:layout_constraintEnd_toEndOf="@+id/repeatPasswordLayout"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/contactSupportTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/contact_support"
        android:layout_marginTop="24dp"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green_back"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>