<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".view.fragments.SupportFragment"
    android:background="@color/payment_dialog_back">

    <ImageView
        android:id="@+id/btnOpenDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/open_drawer_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/furore_font"
        android:text="@string/support"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnOpenDrawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnOpenDrawer" />

    <ImageView
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/send_question"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenDrawer" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/telegramCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pricing_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:shapeAppearanceOverlay="@style/ImageCut"
        app:strokeColor="@color/pricing_card_stroke">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/telegram" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="7"
                android:fontFamily="@font/tactic_round_bold"
                android:text="@string/telegram"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contactCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/pricing_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/telegramCardView"
        app:shapeAppearanceOverlay="@style/ImageCut"
        app:strokeColor="@color/pricing_card_stroke">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/contact" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="7"
                android:fontFamily="@font/tactic_round_bold"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mailCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/pricing_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/contactCardView"
        app:shapeAppearanceOverlay="@style/ImageCut"
        app:strokeColor="@color/pricing_card_stroke">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="7"
                android:fontFamily="@font/tactic_round_bold"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/tactic_round_bold"
        android:text="@string/faq"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/mailCardView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFaq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnProfile"
        app:layout_constraintStart_toStartOf="@+id/btnOpenDrawer"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>